--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -4,6 +4,7 @@ fetch_config_attr_key_id=SELECT id FROM cs_config_attr_key WHERE key = ?
 fetch_config_attr_user_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt LEFT JOIN cs_usr ON cs_config_attr_jt.usr_id = cs_usr.id LEFT JOIN cs_ug ON cs_config_attr_jt.ug_id = cs_ug.id LEFT JOIN cs_domain ON cs_config_attr_jt.dom_id = cs_domain.id WHERE cs_usr.login_name LIKE ? AND cs_ug.name LIKE ? AND cs_domain.name LIKE ? AND key_id = ?)
 fetch_config_attr_ug_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt LEFT JOIN cs_ug ON cs_config_attr_jt.ug_id = cs_ug.id LEFT JOIN cs_domain ON cs_config_attr_jt.dom_id = cs_domain.id WHERE cs_config_attr_jt.usr_id IS NULL AND cs_ug.name LIKE ? AND cs_domain.name LIKE ? AND key_id = ?)
 fetch_config_attr_domain_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt LEFT JOIN cs_domain ON cs_config_attr_jt.dom_id = cs_domain.id WHERE cs_config_attr_jt.usr_id IS NULL AND cs_config_attr_jt.ug_id IS NULL AND cs_domain.name LIKE ? AND key_id = ?)
+fetch_config_attr_exempt_value=SELECT ug_id FROM cs_config_attr_exempt WHERE usr_id = ? AND key_id = ?
 fetch_history=SELECT json_data, valid_from FROM cs_history WHERE class_id = ? AND object_id = ? ORDER BY valid_from DESC
 fetch_history_limit=SELECT json_data, valid_from FROM cs_history WHERE class_id = ? AND object_id = ? ORDER BY valid_from DESC LIMIT ?
 insert_history_entry=INSERT INTO cs_history (class_id, object_id, usr_id, ug_id, valid_from, json_data) VALUES (?, ?, ?, ?, ?, ?)
@@ -12,7 +13,7 @@ table_has_column=SELECT attname FROM pg_attribute WHERE attrelid = (SELECT oid F
 delete_stringrepcacheentry=delete from cs_stringrepcache where class_id=? and object_id=?
 insert_stringrepcacheentry=insert into cs_stringrepcache (class_id,object_id,stringrep) values(?,?,?)
 update_stringrepcacheentry=update cs_stringrepcache set stringrep=? where class_id=? and object_id=?
-get_all_usergroups=SELECT ug.id AS id, ug.name AS name, ug.descr AS descr, ug.domain AS domain, d.name AS domain_name FROM cs_ug ug LEFT OUTER JOIN cs_domain d ON ug.domain = d.id ORDER BY ug.name
+get_all_usergroups=SELECT ug.id AS id, ug.name AS name, ug.descr AS descr, ug.domain AS domain, ug.prio AS prio, d.name AS domain_name FROM cs_ug ug LEFT OUTER JOIN cs_domain d ON ug.domain = d.id ORDER BY ug.name
 get_all_classes=SELECT c.id, c.name, descr, class_icon_id, object_icon_id, table_name, primary_key_field, indexed, toStringClass.qualifier AS toStringQualifier, EditorClass.qualifier AS EditorQualifier, RendererClass.qualifier AS RendererQualifier, c.array_link, c.policy, c.attribute_policy FROM cs_class AS c LEFT OUTER JOIN cs_java_class AS toStringClass ON (c.tostring = toStringClass.id) LEFT OUTER JOIN cs_java_class AS EditorClass ON (c.editor = EditorClass.id) LEFT OUTER JOIN cs_java_class AS RendererClass ON (c.renderer = RendererClass.id)
 get_all_class_attributes=SELECT * FROM cs_class_attr
 get_all_methods=SELECT * FROM cs_method
