--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,6 @@
             <artifactId>cismet-commons</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
-           <dependency>
-            <groupId>de.cismet.commons</groupId>
-            <artifactId>cismet-gui-commons</artifactId>
-            <version>2.0-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
@@ -118,6 +113,11 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.2-pre4</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.5.8</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -146,8 +146,8 @@
             <!-- 
                 rmic will most likely be not necessary any more and is thus
                 
-                DEPRECATED
-             -->
+               DEPRECATED
+            -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>rmic-maven-plugin</artifactId>
