--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.cismet.cids</groupId>
         <artifactId>cids-parent</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
 
     <groupId>de.cismet.cids</groupId>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>de.cismet.commons</groupId>
             <artifactId>cismet-commons</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0-uba-20150109</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
@@ -210,7 +210,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>cidsServer</finalName>
     </build>
 </project>
 
