--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,16 @@
             <artifactId>quartz</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>cids-server-rest-types</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <version>2.5.3</version>
+        </dependency>
     </dependencies>
 
     <build>
