--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>2.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.14.4</version>
+        </dependency>
     </dependencies>
 
     <build>
