--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>de.cismet.commons</groupId>
             <artifactId>cismet-commons</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0-uba-20150724</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
@@ -210,6 +210,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>cidsServer</finalName>
     </build>
 </project>
 
