--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -1,4 +1,4 @@
-verify_user_password=SELECT count(*) FROM cs_usr WHERE trim(lower(login_name)) = trim(lower(?)) AND md5(salt||?)=pw_hash
+verify_user_password=SELECT count(*) FROM cs_usr WHERE login_name = ? AND md5(salt||?)=pw_hash
 fetch_domain_id_from_domain_string=SELECT id FROM cs_domain WHERE name = ?
 fetch_config_attr_key_id=SELECT id FROM cs_config_attr_key WHERE key = ?
 fetch_config_attr_user_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt LEFT JOIN cs_usr ON cs_config_attr_jt.usr_id = cs_usr.id LEFT JOIN cs_ug ON cs_config_attr_jt.ug_id = cs_ug.id LEFT JOIN cs_domain ON cs_config_attr_jt.dom_id = cs_domain.id WHERE cs_usr.login_name LIKE ? AND cs_ug.name LIKE ? AND cs_domain.name LIKE ? AND key_id = ?)
@@ -20,7 +20,7 @@ get_all_methods=SELECT * FROM cs_method
 get_all_images=SELECT * FROM cs_icon
 get_all_users=SELECT id, login_name, password, last_pwd_change, administrator FROM cs_usr
 get_all_memberships=SELECT login_name, ug.name AS ug, 'LOCAL' AS ugDomain FROM cs_ug_membership AS m, cs_usr AS u, cs_ug AS ug WHERE u.id = m.usr_id AND ug.id = m.ug_id
-change_user_password=UPDATE cs_usr SET pw_hash =  md5(salt||?), last_pwd_change = now() WHERE trim(lower(login_name)) = trim(lower(?)) AND md5(salt||?)=pw_hash
+change_user_password=UPDATE cs_usr SET pw_hash =  md5(salt||?), last_pwd_change = now() WHERE login_name = ? AND md5(salt||?)=pw_hash
 get_all_class_permissions=SELECT ug.name AS ug_name, d.name AS domainname, cp.permission, p.key, cp.class_id, cp.ug_id AS ug_id FROM cs_ug_class_perm cp, cs_permission p, cs_ug AS ug, cs_domain AS d WHERE cp.permission = p.id AND cp.ug_id = ug.id AND ug.domain = d.id
 get_all_method_permissions=SELECT DISTINCT m.method_id, plugin_id, u.id AS ug_id ,d.name AS ls FROM cs_ug_method_perm AS p, cs_method AS m, cs_ug AS u, cs_domain AS d WHERE m.id = p.method_id AND u.id = p.ug_id AND u.domain = d.id
 get_attribute_info=SELECT a.*, ts.qualifier AS toStringString, e.qualifier AS editor_class, s.qualifier AS from_string_class, ce.qualifier AS complexeditorclass FROM cs_attr AS a LEFT OUTER JOIN cs_java_class AS e ON (editor = e.id) LEFT OUTER JOIN cs_java_class AS s ON (from_string = s.id) LEFT OUTER JOIN cs_java_class AS ce ON (complex_editor = ce.id) LEFT OUTER JOIN cs_java_class AS ts ON (a.tostring = ts.id) ORDER BY a.class_id, a.pos
