--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,13 @@
     <artifactId>cids-server</artifactId>
     <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-    <name>cids Server</name>
+ 
+    <properties>
+        <names.cids-server>cids Server</names.cids-server>
+        <jersey.version>1.17.1</jersey.version>
+        <jackson.version>2.2.2</jackson.version>
+    </properties>
+    <name>${names.cids-server}</name>
     <description>!!! description pending !!!</description>
     <licenses>
         <license>
@@ -38,11 +43,6 @@
         <url>https://github.com/cismet/cids-server/issues</url>
     </issueManagement>
     
-    <properties>
-        <jersey.version>1.17.1</jersey.version>
-        <jackson.version>2.2.2</jackson.version>
-    </properties>
-
     <repositories>
         <repository>
             <id>cismet-repo</id>
