--- a/src/main/resources/Sirius/server/sql/Bundle_oracle_11g.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle_oracle_11g.properties
@@ -10,8 +10,8 @@ fetch_history=SELECT json_data, valid_from FROM cs_history WHERE class_id = ? AN
 insert_history_entry=INSERT INTO cs_history (class_id, object_id, usr_id, ug_id, valid_from, json_data) VALUES (?, ?, ?, ?, ?, ?)
 has_history=SELECT count(class_id) FROM cs_history WHERE class_id = ? AND object_id = ?
 delete_cacheentry=delete from cs_cache where class_id=? and object_id=?
-insert_cacheentry=insert into cs_cache (class_id,object_id,stringrep) values(?,?,?)
-update_cacheentry=update cs_cache set stringrep=? where class_id=? and object_id=?
+insert_cacheentry=insert into cs_cache (class_id,object_id,stringrep,geometry,lightweight_json) values(?,?,?,?,?)
+update_cacheentry=update cs_cache set stringrep=?, geometry=?,lightweight_json=? where class_id=? and object_id=?
 
 
 get_all_usergroups=SELECT ug.id id, ug.name name, ug.descr descr, ug.domain domain, ug.prio prio, d.name domain_name FROM cs_ug ug LEFT OUTER JOIN cs_domain d ON ug.domain = d.id ORDER BY ug.name
