--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,8 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.5.8</version>
+            <version>1.7.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
@@ -200,6 +201,32 @@
           <version>1.6.4</version>
           <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <!-- windows: use 1.0.1-SNAPSHOT from https://github.com/v-schulz/testcontainers-java -->
+            <!--<version>1.0.1-SNAPSHOT</version>-->
+            <version>1.0.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>1.0.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -223,6 +250,11 @@
                         <!-- this is only a pseudo-test for doing basic performance comparison -->
                         <exclude>**/RMIvsRESTTest.class</exclude>
                     </excludes>
+                    <systemPropertyVariables>
+                            <de.cismet.cids.integrationtests.enabled>
+                                ${de.cismet.cids.integrationtests.enabled}
+                            </de.cismet.cids.integrationtests.enabled>
+                    </systemPropertyVariables>
                 </configuration>
            </plugin>
             <!-- 
