--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,11 @@
     </dependencies>
 
     <build>
+        <testResources>
+        <testResource>
+            <directory>${user.home}/container-data</directory>
+        </testResource>
+    </testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
